--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -46,13 +46,13 @@ $dark: #252525;
 
 $green: #1bb776;
 $pink: #EE3D8A;
-$red: #FF4136;
+$red: #b46368;
 
 
 /* --------------------------------
     Chosen colors
 -------------------------------- */
-$primary-color: $green;
+$primary-color: $red;
 
 $highlight-color: $primary-color;
 $input-placeholder-color: #c3c3c3;
