--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,18 +28,18 @@
     <div class="inner">
       <nav class="nav-collapse">
         <ul>
-          <li class="title">
+          <li>
             <h1>
               <a href="/">André og Lisa</a>
             </h1>
           </li>
-          <li>
+          <li class="<%= current?('svar') %>">
             <a href="/svar">Svar</a>
           </li>
-          <li>
+          <li class="<%= current?('onskeliste') %>">
             <a href="/onskeliste">Ønskeliste</a>
           </li>
-          <li>
+          <li class="<%= current?('info') %>">
             <a href="/info">Nytting informasjon</a>
           </li>
         </ul>
@@ -51,12 +51,12 @@
 
   <footer class="outer">
     <div class="inner">
-      <h3>
+      <!-- <h3>
         Title
       </h3>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      </p>
+      </p> -->
       <!-- <ul class="icon-row large">
         <li>
           <a class="white" href="#"><i class="fa fa-facebook"></i></a>
