--- a/views/svar.erb
+++ b/views/svar.erb
@@ -1,6 +1,6 @@
-<div class=" eyecatcher" style="min-height: 700px; background-image: url('images/LSP13796.jpg');">
+<div class="eyecatcher" style="background-image: url('images/LSP13796.jpg');">
 
-  <div class="ribbon right">
+  <div class="ribbon">
     <h1 class="gifteross">Kommer du?</h1>
     <form class="form" action="">
       <input id="name_input" type="text" placeholder="Navn" name="name">
