Add title to pages

--- a/views/info.erb
+++ b/views/info.erb
@@ -1,7 +1,8 @@
+<% content_for :title do %>Nyttig informasjon<% end %>
 <div class="eyecatcher" style="background-image: url('images/LSP14619.jpg');">
 
   <div class="ribbon">
-    <h1 class="gifteross">Ønskeliste</h1>
+    <h1 class="gifteross">Nyttig informasjon</h1>
     <form class="form" action="">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
