--- a/views/svar.erb
+++ b/views/svar.erb
@@ -1,3 +1,4 @@
+<% content_for :title do %>Svar<% end %>
 <div class="eyecatcher" style="background-image: url('images/LSP13796.jpg');">
 
   <div class="ribbon">
