--- a/public/stylesheets/modular-framework.css
+++ b/public/stylesheets/modular-framework.css
@@ -378,6 +378,9 @@ h1, h2, h3, h4, h5, h6 { font-family: 'Open Sans', sans-serif; }
 .ribbon { background: rgba(179, 163, 151, 0.48); width: 25em; min-height: 710px; color: white; float: left; margin-left: 20%; border-left: 6px solid rgba(255, 255, 255, 0.6); border-right: 6px solid rgba(255, 255, 255, 0.6); }
 .ribbon.right { float: right; margin-right: 20%; }
 
+.onskeliste { text-align: left; padding: 0 2em; }
+.onskeliste li { text-align: left; }
+
 .broad-ribbon { width: 70em; }
 
 .gifteross { font-size: 2.3em; margin-top: 0; padding-top: 1em; font-weight: 500; }
