--- a/sass/modular-framework.scss
+++ b/sass/modular-framework.scss
@@ -79,6 +79,15 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.onskeliste {
+	text-align: left;
+	padding: 0 2em;
+
+	li {
+		text-align: left;
+	}
+}
+
 .broad-ribbon {
 	width: 70em;
 }
