--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,13 +6,11 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Title</title>
+  <title><%= "#{yield_content :title} - " unless yield_content(:title).empty?  %>Andre &#9829; Lisa </title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
 
   <!-- Google webfonts -->
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
   <link href="http://fonts.googleapis.com/css?family=Rouge+Script|Parisienne" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,400italic,400,600italic,600,700italic,700,800italic,800" rel="stylesheet" type="text/css">
 
