--- a/views/onskeliste.erb
+++ b/views/onskeliste.erb
@@ -1,16 +1,19 @@
+<% content_for :title do %>Ønskeliste<% end %>
 <div class="eyecatcher" style="min-height: 700px; background-image: url('images/LSP13925.jpg');">
 
-  <div class="ribbon">
+  <div class="ribbon onskeliste">
     <h1 class="gifteross">Ønskeliste</h1>
-    <form class="form" action="">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+    <p>Vi har lagt ut våre ønskelister på følgende butikker:</p>
+
+    <ul>
+      <li>Tilbords (Farsund Glassmagasin)</li>
+      <li><a href="https://www.kitchn.no/bryllup/vis-liste/?WishListId=47799">Kitch´n Lyngdal</a></li>
+      <li>Bohus Lyngdal</li>
+    </ul>
+
+    <p>Og om du kommer langveis fra, kan kanskje gavekort være en god idé:</p>
+
+    <a href="http://www.ikea.com/ms/no_NO/customer_service/ikea_services/gavekort.html">Gavekort fra IKEA</a>
   </div>
 
 </div>
