Start making it responsive

--- a/views/info.erb
+++ b/views/info.erb
@@ -1,16 +1,12 @@
 <% content_for :title do %>Nyttig informasjon<% end %>
 <div class="eyecatcher" style="background-image: url('images/LSP14619.jpg');">
 
-  <div class="ribbon">
-    <h1 class="gifteross">Nyttig informasjon</h1>
-    <form class="form" action="">
+  <div class="ribbon info">
+    <h1 class="page-title">Nyttig informasjon</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        Dato: Lørdag 22.11.2014 <br>
+        Vielsen starter kl. 13:00 i Spind kirke i Farsund kommune. <br>
+        Festen fortsetter på Husan (Farsund sentrum). Dørene åpnes kl. 16:00
       </p>
   </div>
 
