--- a/views/onskeliste.erb
+++ b/views/onskeliste.erb
@@ -2,7 +2,7 @@
 <div class="eyecatcher" style="min-height: 700px; background-image: url('images/LSP13925.jpg');">
 
   <div class="ribbon onskeliste">
-    <h1 class="gifteross">Ønskeliste</h1>
+    <h1 class="page-title">Ønskeliste</h1>
     <p>Vi har lagt ut våre ønskelister på følgende butikker:</p>
 
     <ul>
