--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,8 +4,199 @@
     x
 
 ----- */
+// Smartphone
+// 320px
+// Tablet
+// 768px
+// Netbook
+// 1024px
+// Desktop
+// 1600px
 
 
-/* --------------------------------
-    x
--------------------------------- */
+
+
+/* apply a natural box layout model to all elements */
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
+body {
+	font-family: 'Open Sans', sans-serif;
+	// background: #b3a397;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Open Sans', sans-serif;
+}
+
+.navigation ul {
+	text-align: center;
+}
+
+.navigation ul li {
+	display: inline-block;
+	padding-right: 4em;
+}
+
+// .top-nav .inner {
+// 	padding: 0!important;
+// }
+
+.eyecatcher {
+	border-top: 5px solid rgba(179,163,151,1);
+	border-bottom: 5px solid rgba(179,163,151,1);
+}
+
+.ribbon {
+	background: rgba(179,163,151, 0.48);
+	width: 25em;
+	color: white;
+	float: left;
+	margin-left: 20%;
+	border-left: 6px solid rgba(255,255,255, 0.6);
+	border-right: 6px solid rgba(255,255,255, 0.6);
+
+	h1.page-title {
+		font-size: 2.3em;
+		font-weight: 500;
+		margin-bottom: 0;
+	}
+
+	&.right {
+		float: right;
+		margin-right: 20%;
+	}
+
+}
+
+.onskeliste, .svar, .info {
+	text-align: left;
+	padding: 0 2em;
+
+	li {
+		text-align: left;
+	}
+}
+
+.gifteross {
+	font-size: 2.3em;
+	margin-top:0;
+	padding-top: 1em;
+	font-weight: 500;
+}
+
+h1#names {
+	font-family: 'Parisienne';
+	font-size: 6em;
+	color: white;
+	text-shadow: 2px 6px 6px rgba(0,0,0,0.6);
+	font-weight: 500;
+
+	.andre {
+		line-height: 1em;
+		display: block;
+	}
+	.og {
+		display: block;
+		line-height: 1em;
+		padding-bottom: .25em;
+	}
+	.lisa {
+		display: block;
+		line-height: 1em;
+	}
+}
+
+.tid {
+	font-size: 1.5em;
+	margin: 0;
+}
+
+.form {
+	margin: 0;
+	padding-bottom: 0.5em;
+
+	input[type=text] {
+		float: none;
+	}
+
+	input[type=checkbox] {
+		margin-right: 1em;
+		vertical-align: middle;
+	}
+
+	label {
+		margin-top: 0.5em;
+		cursor: pointer;
+		// text-align: center;
+		display: block;
+		padding: 0.1em 0;
+		font: inherit;
+		font-weight: normal;
+		font-size: 1.7em;
+	}
+
+	input[type="submit"] {
+		margin:0;
+		margin-top: 2em;
+	}
+
+	.button:focus {
+		border-color: $primary-color;
+	}
+}
+
+
+dl.inline {
+	margin-top: 0;
+
+	dt, dl.inline dd {
+	  float: left;
+	  margin: 0 0.5em 0 0;
+	}
+	dd + dt, dd + dd {
+  	clear: left
+	}
+	dd + dd {
+	  float: none
+	}
+	dt {
+	  font-weight: bold
+	}
+}
+
+footer.outer {
+	background: rgba(179,163,151, 1) !important;
+	color: #191919 ;
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
+/* small screens ----------- */
+@media only screen
+and (min-width : 320px) {
+	min-height: 30em;
+}
+
+/* medium screens ----------- */
+@media only screen
+and (min-width : 768px) {
+	.ribbon {
+		min-height: 30em;
+	}
+}
+
+/* Large screens ----------- */
+@media only screen
+and (min-width : 1025px) {
+	.ribbon {
+		min-height: 45em;
+	}
+}
+/* XLarge screens ----------- */
+@media only screen
+and (min-width : 1600px) {
+/* Styles */
+}
+
