--- a/views/svar.erb
+++ b/views/svar.erb
@@ -1,15 +1,22 @@
 <% content_for :title do %>Svar<% end %>
 <div class="eyecatcher" style="background-image: url('images/LSP13796.jpg');">
 
-  <div class="ribbon">
-    <h1 class="gifteross">Kommer du?</h1>
+  <div class="ribbon svar">
+    <h1 class="page-title">Kommer du?</h1>
     <form class="form" action="">
       <input id="name_input" type="text" placeholder="Navn" name="name">
       <label>
-        <input id="attending_input" type="checkbox" name="attending"> Ja, jeg kommer
+        <input id="attending_input" type="checkbox" name="attending">Ja, jeg kommer
       </label>
       <input type="submit" class="button white" value="Send svar" />
     </form>
+    <p>
+      Hvis du har spørsmål eller problemer så kan du ringe:
+    </p>
+      <dl class="inline">
+        <dt>André:</dt> <dd>905 86 984</dd>
+        <dt>Lisas:</dt> <dd>97408453</dd>
+        <dt>Janne Bulæg:</dt> <dd>473 75 713</dd>
+      </dl>
   </div>
-
 </div>
