--- a/views/layout.erb
+++ b/views/layout.erb
@@ -71,8 +71,7 @@
 
 
   <!-- Javascripts -->
-  <script src="javascripts/jquery-1.10.2.min"></script>
-  <script src="assets/flexslider/jquery.flexslider.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
   <script src="javascripts/modular-framework.js"></script>
 
 </body>
