--- a/views/info.erb
+++ b/views/info.erb
@@ -1,7 +1,7 @@
 <% content_for :title do %>Nyttig informasjon<% end %>
-<div class="eyecatcher" style="background-image: url('images/LSP14619.jpg');">
+<div class="eyecatcher info">
 
-  <div class="ribbon info">
+  <div class="ribbon">
     <h1 class="page-title">Nyttig informasjon</h1>
       <p>
         Dato: Lørdag 22.11.2014 <br>
