--- a/views/onskeliste.erb
+++ b/views/onskeliste.erb
@@ -1,7 +1,7 @@
 <% content_for :title do %>Ønskeliste<% end %>
-<div class="eyecatcher" style="min-height: 700px; background-image: url('images/LSP13925.jpg');">
+<div class="eyecatcher onskeliste">
 
-  <div class="ribbon onskeliste">
+  <div class="ribbon">
     <h1 class="page-title">Ønskeliste</h1>
     <p>Vi har lagt ut våre ønskelister på følgende butikker:</p>
 
