--- a/public/stylesheets/modular-framework.css
+++ b/public/stylesheets/modular-framework.css
@@ -373,13 +373,20 @@ h1, h2, h3, h4, h5, h6 { font-family: 'Open Sans', sans-serif; }
 
 .eyecatcher { border-top: 5px solid #b3a397; border-bottom: 5px solid #b3a397; }
 
-.ribbon { background: rgba(179, 163, 151, 0.48); width: 25em; color: white; float: left; margin-left: 20%; border-left: 6px solid rgba(255, 255, 255, 0.6); border-right: 6px solid rgba(255, 255, 255, 0.6); }
-@media screen and (max-width: 900px) { .ribbon { background: rgba(0, 0, 0, 0.48); border: none; margin-left: 0; width: 100%; padding-bottom: 40px !important; } }
+.info { background-image: url("/images/LSP14619.jpg"); }
+
+.svar { background-image: url("/images/LSP13796.jpg"); }
+
+.frontpage { background-image: url("/images/LSP14012.jpg"); }
+
+.onskeliste { background-image: url("/images/LSP13925.jpg"); }
+
+.ribbon { background: rgba(179, 163, 151, 0.48); width: 25em; color: white; float: left; margin-left: 20%; border-left: 6px solid rgba(255, 255, 255, 0.6); border-right: 6px solid rgba(255, 255, 255, 0.6); min-height: 700px; }
+@media screen and (max-width: 900px) { .ribbon { min-height: initial; background: rgba(0, 0, 0, 0.48); border: none; margin-left: 0; width: 100%; padding-bottom: 40px !important; } }
 .ribbon h1.page-title { font-size: 2.3em; font-weight: 500; margin-bottom: 0; }
 .ribbon.right { float: right; margin-right: 20%; }
-
-.onskeliste, .svar, .info { text-align: left; padding: 0 2em; }
-.onskeliste li, .svar li, .info li { text-align: left; }
+.onskeliste .ribbon, .svar .ribbon, .info .ribbon { text-align: left; padding: 0 2em 2em 2em; }
+.onskeliste .ribbon li, .svar .ribbon li, .info .ribbon li { text-align: left; }
 
 .gifteross { font-size: 2.3em; margin-top: 0; padding-top: 1em; font-weight: 500; }
 @media screen and (max-width: 900px) { .gifteross { font-size: 1.9em; } }
