--- a/views/svar.erb
+++ b/views/svar.erb
@@ -1,7 +1,7 @@
 <% content_for :title do %>Svar<% end %>
-<div class="eyecatcher" style="background-image: url('images/LSP13796.jpg');">
+<div class="eyecatcher svar">
 
-  <div class="ribbon svar">
+  <div class="ribbon">
     <h1 class="page-title">Kommer du?</h1>
     <form class="form" action="">
       <input id="name_input" type="text" placeholder="Navn" name="name">
