--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -53,19 +53,19 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .info {
-	background-image: url('/images/LSP14619.jpg');
+	background-image: url('/images/LSP14619.png');
 }
 
 .svar {
-	background-image: url('/images/LSP13796.jpg');
+	background-image: url('/images/LSP13796.png');
 }
 
 .frontpage {
-	background-image: url('/images/LSP14012.jpg');
+	background-image: url('/images/LSP14012.png');
 }
 
 .onskeliste {
-	background-image: url('/images/LSP13925.jpg');
+	background-image: url('/images/LSP13925.png');
 }
 
 .ribbon {
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
 	min-height: 700px;
 
 	@include media($tablet) {
-		min-height: initial;
+		min-height: inherit;
 		background: rgba(0, 0, 0, 0.48);
 		border: none;
 		margin-left: 0;
