Fix image on frontpage

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-<div class="eyecatcher" style="background-image: url('images/LSP14012.jpg');">
+<div class="eyecatcher frontpage">
 
   <div class="ribbon">
     <h1 class="gifteross">Vi gifter oss!</h1>
