--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -182,6 +182,11 @@ h1#names {
 		font-size: 1.7em;
 	}
 
+	input[type=radio] {
+		margin-right: 10px;
+		vertical-align: middle;
+	}
+
 	input[type="submit"] {
 		margin:0;
 		margin-top: 2em;
@@ -190,7 +195,24 @@ h1#names {
 	.button:focus {
 		border-color: $primary-color;
 	}
+
+	.feedback {
+		margin-top: 1em;
+		padding: 1em;
+		display: inline-block;
+		border-radius: 5px;
+
+		&.success {
+			background: #1bb776;
+		}
+
+		&.error {
+			background: #E40909;
+		}
+
+	}
 }
+
 
 
 dl.inline {
