--- a/views/layout.erb
+++ b/views/layout.erb
@@ -73,6 +73,7 @@
   <!-- Javascripts -->
   <script src="https://code.jquery.com/jquery-2.1.1.js"></script>
   <script src="javascripts/modular-framework.js"></script>
+  <script src="javascripts/main.js"></script>
 
 </body>
 </html>
